--- a/USER/src/pages/css/menu.css
+++ b/USER/src/pages/css/menu.css
@@ -3,7 +3,6 @@ body {
   font-family: Arial, sans-serif;
 }
 
-
 .menu-container {
   text-align: center;
 }
@@ -13,16 +12,87 @@ body {
 }
 
 .dish-list {
+  /* border: 1px solid #ccc; */
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  flex: 1;
+  font-size-adjust: 0.4;
+  font-size: 14px;
+  justify-content: space-around;
+  padding: 10px 30px;
+  text-align: justify;
+  /* text-wrap: wrap; */
+}
+
+.type-header {
+  border-bottom: 1px solid #000000;
+  font-size: 1;
+  margin-bottom: 10px;
+  margin: 20px 0px;
+  padding-bottom: 10px;
+  text-align: center;
+  width: 100%;
+}
+
+.description{
+  font-size: 1em;
+  font-size-adjust: 0.45;
+  /* margin: 10px 0px; */
 }
 
 .dish-item {
+  /* padding: 10px 0px; */
+  border: 1px solid #000000;
   flex: 1;
-  margin: 20px 10px;
-  border: 1px solid #ccc;
-  padding: 10px;
-  text-align: center;
-  width: 200px;
+  font-size-adjust: 0.35;
+  font-size: 1em;
+  height: 273px;
+  margin: 30px;
+  /* text-align: left; */
+  width: 295px;
+  display:auto;
+  position: relative;
+}
+
+.dish-item img {
+  /* size-adjust: 0.4em; */
+  width:inherit;
+  max-height: 50%;
+  max-height: 50;
+  object-fit: fill;
+  border-bottom: 1px solid #000000;
+}
+
+.dish-name {
+  color: #f80c0c;
+  display: inline-block;
+  margin:0;
+  padding:0;
+  float: left;
+  font-size: xx-large;
+}
+
+.dish-price {
+  color: #0073ff;
+  float: right;
+  margin:0;
+  padding:0;
+  display: inline-block;
+  font-size:x-large;
+}
+
+.dish-button-select {
+  /* margin: 4px 2px; */
+  background-color: #ff0099;
+  border-radius: 10px;
+  bottom: 0;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  padding: 10px 24px;
+  position: absolute;
+  right: 0;
+  text-align: left;
+  text-decoration: none;
 }
