--- a/USER/src/pages/css/aboutus.css
+++ b/USER/src/pages/css/aboutus.css
@@ -1,4 +1,9 @@
 /* src/css/about.css */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .about-container {
     max-width: 1200px;
     margin: 0 auto;
