--- a/USER/src/pages/css/menu.css
+++ b/USER/src/pages/css/menu.css
@@ -3,25 +3,34 @@ body {
   font-family: Arial, sans-serif;
 }
 
-.menu-container {
-  text-align: center;
+.menu-page-container {
+    max-width: 1200px;
+    margin: 40px auto;
+    padding: 20px;
 }
 
 .menu-header {
   margin-bottom: 20px;
+  border-bottom: 1px solid #ccc;
 }
 
 .menu-list {
-  /* border: 1px solid #ccc; */
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   flex: 1;
   font-size-adjust: 0.4;
   font-size: 14px;
   justify-content: space-around;
-  padding: 10px 30px;
+  padding: 20px;
   text-align: justify;
-  /* text-wrap: wrap; */
+}
+
+.menu-item {
+  border-radius: 8px;
+  height: 220px;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  cursor: pointer;
 }
 
 .type-header {
@@ -41,18 +50,17 @@ body {
 }
 
 .dish-item {
-  /* padding: 10px 0px; */
   border-radius: 10px;
-  border: 1px solid #c4c4c4;
   flex: 1;
   font-size-adjust: 0.35;
   font-size: 1em;
   height: 273px;
   margin: 30px;
-  /* text-align: left; */
   width: 295px;
   display:auto;
   position: relative;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  cursor: pointer;
 }
 
 .dish-item img {
