--- a/ADMIN/src/pages/css/home.css
+++ b/ADMIN/src/pages/css/home.css
@@ -4,8 +4,8 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .sideBar {
-    width: 250px;
-    background-color: #efecec;
+    width: 300px;
+    background-color: #fefcfc;
     padding: 20px;
     border-right: 1px solid #ddd;
     height: 100vh;
@@ -22,10 +22,29 @@
     cursor: pointer;
     background-color: #e183b5;
     padding: 10px;
+    text-align: center;
+    font-weight: 600;
     color: white;
     border-radius: 10px;
 }
 .sideBar ul li:hover {
     color: #0d0d0d;
-    background-color: #d6c6d0;
+    background-color: #e8ccde;
+    transform: scale(1.1);
+}
+.adminContainer {
+    display: flex;
+    flex: 1;
+    gap: 50px;
+}
+
+.mainContainer {
+    flex:1;
+}
+
+h1{
+    margin: 50px 0;
+    font-size: 50px;
+    font-family:'Courier New', Courier, monospace;
+    
 }
