--- a/ADMIN/src/pages/css/nav.css
+++ b/ADMIN/src/pages/css/nav.css
@@ -44,6 +44,9 @@ body{
     color:#ff0099;
     cursor: pointer;
 }
+.left span {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .logo {
     font-size: 34px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
