Minh Trí_Chỉnh sửa_Thêm dữ liệu vào CustomerMgmt

--- a/ADMIN/src/pages/css/sidebar.css
+++ b/ADMIN/src/pages/css/sidebar.css
@@ -3,7 +3,7 @@
     background-color: #fefcfc;
     padding: 20px;
     border-right: 1px solid #ddd;
-    height: auto;
+    height: 100vh;
 }
 
 .sideBar ul {
