--- a/ADMIN/src/pages/css/staff-mgmt.css
+++ b/ADMIN/src/pages/css/staff-mgmt.css
@@ -16,41 +16,11 @@
     margin: 0 100px;
 }
 
-.table-box {
-    border-radius: 10px;
-    width: 100%;
-    height: fit-content;
-    padding: 30px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
-}
-
-.search-box {
+.header-container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    gap: 10px;
-    padding-bottom: 30px;
-    width: 400px;
-}
-
-.search-input {
-    flex: 1;
-    padding: 8px 12px;
-    border: 1px solid #ff0099;
-    border-radius: 4px;
-    font-size: 14px;
-}
-
-.search-button {
-    background-color: #ff0099;
-    color: white;
-    border: none;
-    padding: 8px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.search-button:hover {
-    background-color: #a31b1b;
+    margin-bottom: 20px;
 }
 
 h1 {
@@ -59,15 +29,58 @@ h1 {
     font-family: 'Arial', 'Courier', 'monospace';
 }
 
+.table-box {
+    border-radius: 10px;
+    width: 100%;
+    height: fit-content;
+    padding: 30px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
+}
+
+.search-and-pagination-container {
+    display: flex;
+    align-items: center;
+    justify-items: space-between;
+    gap: 10px;
+    padding-bottom: 30px;
+    width: 100%;
+    white-space: nowrap;
+}
+
+.search-input {
+    width: 200px;
+    /* flex: 1; */
+    padding: 8px 12px;
+    border: 1px solid #ff0099;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.pagination-controls {
+    display: flex;
+    align-items: center;
+    white-space: nowrap; /* Prevent wrapping */
+    gap: 10px;
+}
+
 .staff-table {
     border: 1px solid #ccc; /* Viền đen */
     border-radius: 10px; /* Độ cong 10px */
     width: 100%; /* Vừa với ô chứa nội dung */
     border-collapse: collapse; /* Gộp viền của các ô */
+    font-size: small;
 }
 
 .staff-table th, .staff-table td {
     border: 1px solid #ccc; /* Viền đen cho các ô */
     padding: 10px; /* Khoảng cách bên trong các ô */
     text-align: left; /* Căn trái nội dung */
+}
+
+.staff-table tbody tr {
+    cursor: pointer;
+}
+
+.staff-table tbody tr:hover {
+    background-color: #f0f0f0; /* Optional: Add a hover effect for better UX */
 }
